# agent-super-memory-mvp

./: .env  README.md  config.py  design.md  dialogue_store.py  main.py  memory_agent.py  memory_service.py  permanent_memory_store.py  pyproject.toml  requirements.txt  schema_manager.py  schema_react_agent.py  test_main.http  test_sql.http  tools_spec.py  unified_dialogue_agent.py  结构化数据库智能体一期整体详细设计文档.md  结构化数据库智能体二期整体详细设计文档.md  详细设计.md
docs/: dialogue_table_ddl.md  mysql_schema_agent_demo.sql  mysql_schema_agent_demo_setup.md  permanent_memory_ddl.md  schema_react_mode.md  统一对话永不忘助手详细设计.md  长期记忆系统 v5.0 增量修改文档（相对 v4.0）.md
log/: 2026-04-21T231456.200.json  2026-04-21T231550.200.json  2026-04-21T231822.200.json  2026-04-21T231930.200.json  2026-04-21T232026.200.json  2026-04-21T232123.200.json  2026-04-21T232201.200.json  2026-04-21T232305.200.json  2026-04-21T232329.200.json  2026-04-21T232424.200.json  2026-04-21T232518.200.json  2026-04-21T232532.200.json
tests/: ecommerce_tables.md  memory_tables.md  test_dialogue_store_unit.py  test_main_schema_models.py  test_memory_agent_permanent_tool.py  test_permanent_memory_store_unit.py  test_schema_extract.py  test_schema_manager_unit.py  test_schema_react_agent.py  test_unified_dialogue_agent.py  test_unified_permanent_tool.py  test_v4_memory_unit.py  test_v5_enums.py
