[project]
name = "agent-super-memory-mvp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "neo4j>=5.0",
    "numpy>=1.24.0",
    "ollama>=0.3.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pymilvus>=2.4.0",
    "pymysql>=1.1.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]
